# shadoks-robots

./: LICENSE  README.md
greedy/: CMakeLists.txt  README.md
greedy/cmake/: FindCplex.cmake
greedy/src/: finderpoints.cpp  finderpoints.h  instance.cpp  instance.h  main.cpp  searcherboundedpaths.cpp  searcherboundedpaths.h  searchermoves.cpp  searchermoves.h  searcherpaths.cpp  searcherpaths.h  searcherpoints.cpp  searcherpoints.h  solution.cpp  solution.h  solvergreedy.cpp  solvergreedy.h  tools.h
optimizer/: crash.cpp  makeall.sh  navigator.cpp  optimizerC.cpp  optimizerF.cpp  primitives.cpp  robot.cpp  tsl  world.cpp
robot_by_robot/: cootie  cootie.cpp  crash.cpp  cross  cross.cpp  dichotomy  dichotomy.cpp  makeall.sh  navigator.cpp  primitives.cpp  robot.cpp  world.cpp
robot_by_robot/tests/: small_free_019_20x20_90_360.cootie.20210317-094832.network.json  small_free_019_20x20_90_360.cootie.20210317-094841.solution.json  small_free_019_20x20_90_360.cootie.20210317-094848.solution.json  small_free_019_20x20_90_360.cross.20210317-094940.network.json  small_free_019_20x20_90_360.cross.20210317-094944.solution.json  small_free_019_20x20_90_360.cross.20210317-094950.solution.json  small_free_019_20x20_90_360.dichotomy.20210317-095222.network.json  small_free_019_20x20_90_360.dichotomy.20210317-095226.solution.json  small_free_019_20x20_90_360.dichotomy.20210317-095231.network.json  small_free_019_20x20_90_360.dichotomy.20210317-095231.solution.json  small_free_019_20x20_90_360.dichotomy.20210317-095234.solution.json  small_free_019_20x20_90_360.dichotomy.20210317-095240.solution.json
